# Agenda

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  accents.py  accents.spec  administration.c  administration.h  agenda.c  agenda.h  checklist.txt  compile.bat  doxygen.bat  main.c  package.json  test.txt  tools.c  tools.h
documentation/: doxygen_entrydb_15312.tmp
documentation/html/: accents_8py.html  administration_8c.html  administration_8h.html  administration_8h_source.html  agenda_8c.html  agenda_8h_source.html  annotated.html  array_8c.html  array_8h_source.html  classes.html  deprecated.html  dir_0ba9cc650abb50345ddd245041657aed.html  dir_23acf38d3fcc8dda20c3df09a2315206.html  dir_4330fcea619e060300cc172bfe13ab9a.html  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_7522e202e459d68e47310c7931c2d14a.html  dir_82d74b7273201396b53a4bf04582a693.html  dir_95e29a8b8ee7c54052c171a88bb95675.html  dir_cbdb8362360e11eafe2fa3bc74cf0ffd.html  dir_e6c41fb611ac513ae4048f59273529ec.html  dir_ef702146738be33f82ccd06870f482b0.html  dir_f69627479fa42c88ea951dd651cf4e20.html  dir_f89abcb304c928c7d889aa5625570de5.html  files.html  functions.html  functions_vars.html  globals.html  globals_func.html  globals_vars.html  index.html  main_8c.html  md__r_e_a_d_m_e.html  md_node_modules_ansi-gray_readme.html  md_node_modules_ansi-regex_readme.html  (+70 more)
src/: administration.c  administration.h  agenda.c  agenda.h  array.c  array.h  arrays.c  arrays.h  main.c  test.c  tools.c  tools.h
utils/: accents.py  accents.spec
utils/accents/: accents.py  (+1 more)
(+82 files in other folders)
